--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 	<div class="wrapper">
 		
 		<header class="menu">
-		<nav>
+		<nav class="manu_icon">
 			<ul>
 				<li>
 					<a class="logo" href="#"></a>
